[project]
name = "cyberml"
version = "0.1.0"
description = "IoT Intrusion Detection and Adversarial ML Project (2025-2026)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "art>=6.5",
    "foolbox>=3.3.4",
    "imbalanced-learn>=0.14.0",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.0.0",  
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
    "tensorflow>=2.17.0",
    "torch>=2.4.0",
    "xgboost>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.0.0",
    "ruff>=0.6.0",
]